# reaxive-example

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: styles.css
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/: mod.rs
src/pages/posts/: mod.rs
src/pages/user/: mod.rs
src/shared/: fullscreen.rs  mod.rs  router.rs  state.rs
src/shared/ui/: mod.rs
src/shared/ui/layout/: main_layout.rs  mod.rs
src/shared/ui/navigation/: mod.rs  navbar.rs
src/stores/: counter_store.rs  mod.rs
