[package]
name = "riseonly-desktop-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["web", "router", "desktop"] }
dioxus-router = "0.4"
dioxus-desktop = "0.6"
dioxus-logger = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
lazy_static = "1.4"
reaxive = "1.0.3"

[workspace]
members = ["src-tauri"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
